# CS4850

C_skeletons/client/: client.cpp  client.vcxproj
C_skeletons/server/: server.vcxproj
Project_V1/: CMakeLists.txt  README.md  client.c  server.c
Project_V1/include/: chatRoom.h  client.h  server.h
Project_V1/lib/: chatRoom.c  client.c  server.c
Project_V1/src/: client.c  client_main.c  server.c  server_main.c
Project_V1/test/: server_test.c
Project_V2/: CMakeLists.txt  README.md
Project_V2/data/: users.txt
Project_V2/include/: chatRoom.h  client.h  server.h
Project_V2/lib/: client.c  server.c
Project_V2/libs/: chatRoom.c  client.c
Project_V2/src/: client_main.c  server_main.c
Project_V2/test/: client_test.c
